--- a/setup.cfg
+++ b/setup.cfg
@@ -23,4 +23,5 @@ test = pytest
 
 [tool:pytest]
 collect_ignore = ['setup.py']
-
+norecursedirs = env venv etc docs onevmlist.egg-info .git* .idea .pytest_cache
+addopts = -v --flake8 --cov=onevmlist --cov-report term-missing --disable-warnings
